kubernetes/namepsace-Limit-range.yaml
#Cautions : Dont forget to add default request
apiVersion: v1
kind: Namespace
metadata:
  name: python-app
